# vimhjkl

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: aur-publish.yml  ci.yml  homebrew-bump.yml  translate-curriculum.yml
content/: llm_pool.json  skills.json
packaging/aur/: PKGBUILD
packaging/homebrew/: vimhjkl.rb
scripts/: _env.py  detect_curriculum_changes.py  generate_translation.py  update_translation.py  validate_translation.py
src/vimhjkl/: __init__.py  __main__.py  challenge.py  cli.py  config.py  engine.py  grader.py  keys.py  store.py  tui.py
src/vimhjkl/data/: skills.json
src/vimhjkl/data/i18n/: TRANSLATION_SPEC.md  i18n-schema.json  zh-CN.json
tests/: test_engine.py  test_grader.py  test_i18n.py  test_tui.py
